--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pical",
-  "productName": "pical",
+  "name": "picalc",
+  "productName": "picalc",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "simple forex calculator",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -14,7 +14,7 @@
   "keywords": [],
   "author": {
     "name": "lashkaryrad",
-    "email": "127009792+lashkaryrad@users.noreply.github.com"
+    "email": "lashkaryrad@gmail.com"
   },
   "license": "MIT",
   "dependencies": {
